[package]
name = "ns-to-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
reqwest = {version= "0.11.22", features = ["blocking", "json"] }
serde = {version="1.0.190", features = ["derive"] }
discord-rich-presence = "0.2.3"
